Finally actually fixed side scrolling on mobile

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
       </section>
 
-      <section class="bg-blur" id="contact">
+      <section id="contact">
           <h2 class="text-gradient">Contact Me!</h2>
           <h3>If you're building something cool, then reach out to me! I'd love to work with you!</h3>
           <div class="icon-container">
